<resources>
    <string name="app_name">GT Motors</string>
    <string name="action_bar_search_fragment_title">Search</string>
    <string name="action_bar_search_results_fragment_title">Search Results</string>
    <string name="placeholder_filter">Filter</string>
    <string name="placeholder_results">Results</string>
    <string name="placeholder_make_model">make / model</string>
    <string name="placeholder_year">year</string>
    <string name="placeholder_search">search</string>
    <string name="make_hint">Make</string>
    <string name="model_hint">Model</string>
    <string name="year_hint">Year</string>
    <string name="vehicle_make">Make: %1$s</string>
    <string name="vehicle_model">Model: %1$s</string>
    <string name="vehicle_year">Year: %1$s</string>
    <string name="clear_filters">Clear filters</string>
    <string name="loading">Loading...</string>
</resources>