<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/search_screen_header"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="32dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            style="@style/ButtonStyle"
            android:text="@string/clear_filters"
            android:layout_alignParentEnd="true"
            app:drawableEndCompat="@drawable/ic_clear" />
    </RelativeLayout>

    <TextView
        android:id="@+id/car_make_model_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_make_model"
        android:textSize="16sp"
        app:drawableTint="@color/drawable_tint"
        app:drawableTopCompat="@drawable/ic_car"
        app:layout_constraintEnd_toStartOf="@id/car_year_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_screen_header" />

    <ImageView
        android:id="@+id/car_make_model_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_circle"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/car_make_model_button"
        app:layout_constraintTop_toTopOf="@id/car_make_model_button" />

    <TextView
        android:id="@+id/car_year_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_year"
        android:textSize="16sp"
        app:drawableTint="@color/drawable_tint"
        app:drawableTopCompat="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_make_model_button"
        app:layout_constraintTop_toBottomOf="@id/search_screen_header" />

    <ImageView
        android:id="@+id/car_year_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_circle"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/car_year_button"
        app:layout_constraintTop_toTopOf="@id/car_year_button" />

    <include
        android:id="@+id/bottom_layout"
        layout="@layout/bottom_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>